src/mesa/drivers/common/meta.c
@@ -681,9 +681,11 @@ _mesa_meta_begin(struct gl_context *ctx, GLbitfield state)
                      0.0, ctx->DrawBuffer->Height,
                      -1.0, 1.0);
 
-      save->ClipOrigin = ctx->Transform.ClipOrigin;
-      save->ClipDepthMode = ctx->Transform.ClipDepthMode;
-      _mesa_ClipControl(GL_LOWER_LEFT, GL_NEGATIVE_ONE_TO_ONE);
+      if (ctx->Extensions.ARB_clip_control) {
+         save->ClipOrigin = ctx->Transform.ClipOrigin;
+         save->ClipDepthMode = ctx->Transform.ClipDepthMode;
+         _mesa_ClipControl(GL_LOWER_LEFT, GL_NEGATIVE_ONE_TO_ONE);
+      }
    }
 
    if (state & MESA_META_CLIP) {
@@ -1086,7 +1088,8 @@ _mesa_meta_end(struct gl_context *ctx)
 
       _mesa_MatrixMode(save->MatrixMode);
 
-      _mesa_ClipControl(save->ClipOrigin, save->ClipDepthMode);
+      if (ctx->Extensions.ARB_clip_control)
+         _mesa_ClipControl(save->ClipOrigin, save->ClipDepthMode);
    }
 
    if (state & MESA_META_CLIP) {
